--- a/static/css/style.css
+++ b/static/css/style.css
@@ -548,6 +548,7 @@ body
 {
   height:4vh;
   position: relative;
+  
 }
 
 .options-table-hr
@@ -560,6 +561,8 @@ body
   left:0;
   right:0;
   margin:auto;
+  width: 80%;
+  border-bottom: solid rgb(255, 255, 255) 0.1vh;
 }
 
 .select-selected
@@ -611,4 +614,22 @@ body
 .select-container
 {
   height:4vh;
+}
+
+
+
+
+.marker-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+	mask-size: contain;
+}
+
+.marker-color-overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
