--- a/static/css/style.css
+++ b/static/css/style.css
@@ -311,7 +311,7 @@ body
   top:0;
   height:100vh;
   width:var(--panel-width);
-  background: rgba(33,0,2,1);
+  background: rgb(0, 0, 0);
   z-index: 4;
 }
 
@@ -321,7 +321,7 @@ body
   right: -2vh;
   width: 2vh;
   height: 15vh;
-  background: rgba(33,0,2,1);
+  background: rgb(0, 0, 0);
   z-index: 4;
   top:50%;
   transform: translate(0,-50%);
@@ -352,7 +352,7 @@ body
   top:0;
   height:100vh;
   width:var(--panel-width);
-  background: rgba(33,0,2,1);
+  background: rgb(0, 0, 0);
   z-index: 4;
 }
 
@@ -363,7 +363,7 @@ body
   left: -2vh;
   width: 2vh;
   height: 15vh;
-  background: rgba(33,0,2,1);
+  background: rgb(0, 0, 0);
   z-index: 4;
   top:50%;
   transform: translate(0,-50%);
@@ -568,27 +568,29 @@ body
 .select-selected
 {
   position: relative;
-  background: #c88937;
+  background: #ffffff;
   border: solid 0.1vh white;
   padding: 0.5vh;
   cursor: pointer;
   opacity: 1;
+  color: black;
 }
 
 .select-option
 {
   position: relative;
-  background: #c88937;
+  background: #ffffff;
   border: solid 0.1vh white;
   padding: 0.5vh;
   cursor: pointer;
   opacity: 0.9;
   z-index: 5;
+  color: black;
 }
 
 .select-image
 {
-  width: 3vh;
+  width: 1.5vh;
   user-select: none;
   pointer-events: none;
 }
@@ -596,7 +598,7 @@ body
 .select-name
 {
   margin-left:1vh;
-  top:1.5vh;
+  top:0.7vh;
   position: absolute;
   user-select: none;
   pointer-events: none;
@@ -605,7 +607,7 @@ body
 .select-selector
 {
   right:1vh;
-  top:1.5vh;
+  top:0.7vh;
   position: absolute;
   user-select: none;
   
@@ -633,3 +635,82 @@ body
   top: 0;
   left: 0;
 }
+
+
+
+#title-widget
+{
+  position: absolute;
+  z-index: 100;
+  top:5vh;
+  font-size: 5vh;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  text-align: center;
+  left:0;
+  right:0;
+  margin: auto;
+  color: white;
+}
+
+#show-distance-text
+{
+  font-size: 3vh;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+  position: absolute;
+  right:-8vh;
+  top:50%;
+}
+
+
+#panel-line
+{
+  border-bottom: solid 0.2vh white;
+  opacity: 0.8;
+  width:80%;
+  margin:auto;
+  margin-top:1vh;
+}
+
+#help-panel > ul > li
+{
+  font-size: 1.5vh;
+  color:white;
+  margin:0;
+  padding: 0;
+  margin-left:2vh;
+}
+
+#buttons-panel
+{
+  width:80%;
+  margin:auto;
+}
+
+#buttons-panel > button
+{
+  width:45%;
+  margin:auto;
+  display: inline;
+  float: right;
+  color:white;
+  background: black;
+  border: solid 0.2vh rgb(255, 255, 255);
+  border-radius: 1vh;
+  font-size: 1.5vh;
+  padding: 0.5vh;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+#buttons-panel > button:hover
+{
+  transform: scale(1.1);
+  opacity: 0.8;
+}
+
+#buttons-panel > :first-child 
+{
+  float:left !important;
+}
+
