--- a/static/css/style.css
+++ b/static/css/style.css
@@ -714,3 +714,18 @@ body
   float:left !important;
 }
 
+#elevation-widget {
+	position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 20vh;
+    background-color: rgb(0, 0, 0); 
+    z-index: 3;
+}
+
+#elevationChart {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
