working elevation widget

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -313,6 +313,7 @@ body
   width:var(--panel-width);
   background: rgb(0, 0, 0);
   z-index: 4;
+  display: none;
 }
 
 #image-tab-pop
@@ -354,6 +355,7 @@ body
   width:var(--panel-width);
   background: rgb(0, 0, 0);
   z-index: 4;
+  display: none;
 }
 
 
@@ -722,6 +724,7 @@ body
     height: 20vh;
     background-color: rgb(0, 0, 0); 
     z-index: 3;
+    display: none;
 }
 
 #elevationChart {
