--- a/static/css/style.css
+++ b/static/css/style.css
@@ -771,3 +771,18 @@ body
   margin-top:1vh;
   margin-bottom:1vh;
 }
+
+.gallery-marker-remove {
+	position: absolute;
+	bottom: 3.3vh;
+	left: -1.25vh;
+	font-size: 1.5vh;
+	cursor: pointer !important;
+	background: white;
+	border: solid 0.25vh black;
+	border-radius: 100%;
+	height: 1.5vh;
+	width: 1.5vh;
+	text-align: center;
+	line-height: 1.3vh;
+}
