--- a/static/css/style.css
+++ b/static/css/style.css
@@ -36,6 +36,7 @@ body
     top:0;
     left:-20%;
     top:-30%;
+    transition: all 0.1s;
 }
 
 #background-level-1
@@ -644,7 +645,7 @@ body
 #title-widget
 {
   position: absolute;
-  z-index: 100;
+  z-index: 3;
   top:5vh;
   font-size: 5vh;
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
