--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1012,11 +1012,33 @@ body
   transition: all 0.2s;
 }
 
-
-
-
 .image-placer:hover
 {
   transform: scale(1.1);
   opacity: 0.8;
+}
+
+#mobile-blocker
+{
+  position: absolute;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  background: black;
+  z-index:10000;
+  display: none;
+}
+
+#mobile-blocker > p {
+	color: white;
+	margin: auto;
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	transform: translate(0,-50%);
+	font-size: 3vh;
+	width: 70%;
+	left: 0;
+	right: 0;
 }
